tests/generated/154_unordered_list.out
Fatal error: Call to undefined method DtlIter::unordered_list() in /home/rune/workspace/php-misc/php-dtl-iterator/tests/django-generated/154_unordered_list.php on line 7